--- a/package.json
+++ b/package.json
@@ -28,14 +28,17 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cookies-next": "^6.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
     "input-otp": "^1.4.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.548.0",
     "next": "16.0.1",
     "next-themes": "^0.4.6",
+    "radix-ui": "^1.4.3",
     "range-slider-input": "^2.4.5",
     "react": "19.2.0",
+    "react-day-picker": "^9.13.2",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.0",
     "sonner": "^2.0.7",
